--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,8 @@
 locale                   : "en-US"
 title                    : "Kevin Stanford Liao"
 title_separator          : "-"
-name                     : &name "Kevin Liao"
-description              : &description "personal description"
+name                     : "Kevin Liao"
+description              : "personal description"
 url                      : https://kliao12.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               :  #"academicpages/academicpages.github.io"
