--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,7 +8,10 @@ main:
     
   - title: "Teaching"
     url: /teaching/    
-    
+  
+  - title: "Projects"
+    url: /projects/    
+      
   - title: "CV"
     url: /cv/
     
