--- a/_config.yml
+++ b/_config.yml
@@ -81,9 +81,9 @@ analytics:
 # Site Author
 author:
   name             : "Kevin Stanford Liao"
-  #avatar           : "/assets/images/IMG_2766.JPG"
   bio              : "2nd Year Masters Student in Biostatistics at the University of Michigan"
   location         : "Ann Arbor, MI"
+  avatar           : "/assets/images/IMG_2766.JPG"
   employer         :
   #googlescholar    : "http://yourfullgooglescholarurl.com"
   email            : "ksliao@umich.edu"
