--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   name             : "Kevin Stanford Liao"
   bio              : "2nd Year Masters Student in Biostatistics at the University of Michigan"
   location         : "Ann Arbor, MI"
-  avatar           : "/assets/images/IMG_2766.JPG"
+  avatar           : "/files/KL_pic.jpg"
   employer         :
   #googlescholar    : "http://yourfullgooglescholarurl.com"
   email            : "ksliao@umich.edu"
