--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   name             : "Kevin Stanford Liao"
   bio              : "2nd Year Masters Student in Biostatistics at the University of Michigan"
   location         : "Ann Arbor, MI"
-  avatar           : "/files/KL_pic.jpg"
+  avatar           : "KL_pic.jpg"
   employer         :
   #googlescholar    : "http://yourfullgooglescholarurl.com"
   email            : "ksliao@umich.edu"
@@ -95,12 +95,12 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "https://github.com/kliao12"
+  github           : "kliao12"
   google_plus      :
   keybase          :
   instagram        :
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/kevin-liao-2181498a"
+  linkedin         : "kevin-liao-2181498a"
   #orcid            : "http://orcid.org/yourorcidurl"
   pinterest        :
   soundcloud       :
