--- a/_config.yml
+++ b/_config.yml
@@ -11,8 +11,8 @@ title                    : "Kevin Stanford Liao"
 title_separator          : "-"
 name                     : "Kevin Liao"
 description              : "personal description"
-url                      : "https://kliao12.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl                  : "" # the subpath of your site, e.g. "/blog"
+url                      : #"https://kliao12.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               :  #"academicpages/academicpages.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
