--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Kevin Stanford Liao"
-  avatar           : "https://kliao12.github.io/assets/images/IMG_2766.JPG"
+  avatar           : "https://kliao12.github.io/assets/images/workplease.png"
   bio              : "Current 2nd year masters student in Biostatistics at the University of Michigan"
   location         : "Ann Arbor, MI"
   employer         :
