--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Kevin Stanford Liao"
   avatar           : "https://kliao12.github.io/assets/images/workplease.PNG"
-  bio              : "Current 2nd year masters student in Biostatistics at the University of Michigan"
+  bio              : "Current PhD Candidate in Biostatistics at the University of Michigan"
   location         : "Ann Arbor, MI"
   employer         :
   googlescholar    : #"http://yourfullgooglescholarurl.com"
